.provarCaches/00D5f000005vwGkEAI/objects/rstk__mrpdeleterecord__c.object
<CustomObject>
    <fields>
        <fullName>rstk__icreqid__c</fullName>
        <label>icreqid</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__mrplaunchid__c</fullName>
        <label>mrplaunchid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wocstid__c</fullName>
        <label>wocstid</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>mrpdeleterecord</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>mrpdeleterecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>